--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p id="quote-text">Click the button to get a quote!</p>
       <p id="quote-author"></p>
     </div>
-    <button id="new-quote-btn">Get New Quote</button>
+    <button id="new-quote">Get New Quote</button>
   </div>
   <script src="script.js"></script>
 </body>
